--- a/WhereIsThing/app/src/main/res/values/colors.xml
+++ b/WhereIsThing/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorWhiteBG">#ffffff</color>
     <color name="colorBlackFT">#000000</color>
     <color name="colorMainFT">#575757</color>
+    <color name="colorAdd">#4793d6</color>
 </resources>
