--- a/WhereIsThing/app/src/main/res/layout/activity_main.xml
+++ b/WhereIsThing/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,13 @@
                 android:layout_gravity="center"
                 app:srcCompat="@drawable/mic" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center" />
+
             <ImageView
                 android:id="@+id/iv_main_micing"
                 android:layout_width="60dp"
@@ -64,7 +71,7 @@
         android:background="@color/colorBasicBG"
         android:gravity="bottom"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,9 +87,10 @@
                 app:srcCompat="@mipmap/ic_launcher_round" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tv_menu_title"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/main_menu_nickname"
                 android:textColor="@color/colorWhiteBG"
@@ -103,17 +111,17 @@
 
                 <LinearLayout
                     android:id="@+id/ll_menu_home"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginRight="15dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        app:srcCompat="@drawable/menu_home" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -126,24 +134,24 @@
 
                 <LinearLayout
                     android:id="@+id/bar1"
-                    android:layout_width="2dp"
-                    android:layout_height="140dp"
-                    android:background="@color/colorWhiteBG"
+                    android:layout_width="1dp"
+                    android:layout_height="150dp"
+                    android:background="@color/colorMainFT"
                     android:orientation="vertical"></LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_menu_notify"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        app:srcCompat="@drawable/menu_notify" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -158,9 +166,9 @@
 
             <LinearLayout
                 android:id="@+id/bar2"
-                android:layout_width="280dp"
-                android:layout_height="2dp"
-                android:background="@color/colorWhiteBG"
+                android:layout_width="300dp"
+                android:layout_height="1dp"
+                android:background="@color/colorMainFT"
                 android:orientation="vertical"></LinearLayout>
 
             <LinearLayout
@@ -170,18 +178,17 @@
 
                 <LinearLayout
                     android:id="@+id/ll_menu_option"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        app:srcCompat="@drawable/menu_option" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -194,26 +201,24 @@
 
                 <LinearLayout
                     android:id="@+id/bar3"
-                    android:layout_width="2dp"
-                    android:layout_height="140dp"
-                    android:layout_weight="1"
-                    android:background="@color/colorWhiteBG"
+                    android:layout_width="1dp"
+                    android:layout_height="150dp"
+                    android:background="@color/colorMainFT"
                     android:orientation="vertical"></LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_menu_list"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        app:srcCompat="@drawable/ic_launcher_background" />
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        app:srcCompat="@drawable/menu_list" />
 
                     <TextView
                         android:layout_width="wrap_content"
