--- a/WhereIsThing/app/src/main/res/layout/activity_add.xml
+++ b/WhereIsThing/app/src/main/res/layout/activity_add.xml
@@ -7,39 +7,74 @@
     android:background="@color/colorWhiteBG"
     tools:context=".View.MainActivity">
 
+    <TextView
+        android:id="@+id/add_tv_test1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/add_tv_test2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/add_tv_test3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/add_tv_test4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:text="TextView" />
+
     <ImageView
         android:id="@+id/iv_add_25"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:scaleType="fitXY"
         android:visibility="gone"
-        app:srcCompat="@color/colorAdd" />
+        app:srcCompat="@drawable/add_quter" />
 
     <ImageView
         android:id="@+id/iv_add_50"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:scaleType="fitXY"
         android:visibility="gone"
-        app:srcCompat="@color/colorAdd" />
+        app:srcCompat="@drawable/add_half" />
 
     <ImageView
         android:id="@+id/iv_add_75"
         android:layout_width="match_parent"
-        android:layout_height="470dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:scaleType="fitXY"
         android:visibility="gone"
-        app:srcCompat="@color/colorAdd" />
+        app:srcCompat="@drawable/add_unquter" />
 
     <ImageView
         android:id="@+id/iv_add_full"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        app:srcCompat="@color/colorAdd" />
+        app:srcCompat="@color/colorFull" />
+
+    <ImageView
+        android:id="@+id/iv_add_half"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_gravity="bottom"
+        android:visibility="gone"
+        app:srcCompat="@color/colorFull" />
 
     <TextView
         android:id="@+id/tv_add_per"
@@ -49,7 +84,7 @@
         android:layout_marginBottom="130dp"
         android:gravity="center"
         android:text="@string/add_per_default"
-        android:textColor="@color/colorWhiteBG"
+        android:textColor="@color/colorMainFT"
         android:textSize="30dp" />
 
     <LinearLayout
@@ -75,13 +110,6 @@
             android:layout_height="60dp"
             android:layout_weight="1">
 
-            <ProgressBar
-                android:id="@+id/progressBar3"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center" />
-
             <ImageView
                 android:id="@+id/iv_add_mic"
                 android:layout_width="60dp"
@@ -97,6 +125,25 @@
                 android:layout_gravity="center"
                 android:visibility="invisible"
                 app:srcCompat="@drawable/micing" />
+
+            <ImageView
+                android:id="@+id/iv_add_check"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/mic_check" />
+
+            <ProgressBar
+                android:id="@+id/pb_add"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/colorProgressbar"
+                android:indeterminateTintMode="src_atop"
+                android:visibility="invisible" />
         </FrameLayout>
 
     </LinearLayout>
