--- a/WhereIsThing/app/src/main/res/layout/activity_main.xml
+++ b/WhereIsThing/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,6 @@
                 android:layout_gravity="center"
                 app:srcCompat="@drawable/mic" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center" />
-
             <ImageView
                 android:id="@+id/iv_main_micing"
                 android:layout_width="60dp"
@@ -68,7 +61,7 @@
         android:id="@+id/ll_main_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBasicBG"
+        android:background="@drawable/menu_bg"
         android:gravity="bottom"
         android:orientation="vertical"
         android:visibility="invisible">
