--- a/WhereIsThing/app/src/main/res/layout/activity_module_list.xml
+++ b/WhereIsThing/app/src/main/res/layout/activity_module_list.xml
@@ -46,6 +46,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="25dp"
             android:layout_marginRight="25dp"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/floting_add" />
 
         <android.support.v7.widget.RecyclerView
@@ -64,5 +65,6 @@
             android:textColor="@color/colorMainFT"
             android:textSize="25sp"
             android:visibility="visible" />
+
     </FrameLayout>
 </LinearLayout>
