--- a/WhereIsThing/app/src/main/res/layout/item_main_list.xml
+++ b/WhereIsThing/app/src/main/res/layout/item_main_list.xml
@@ -7,16 +7,16 @@
     card_view:cardCornerRadius="8dp">
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:background="@color/colorItem"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="90dp"
-            android:layout_height="130dp"
+            android:layout_width="60dp"
+            android:layout_height="95dp"
             card_view:srcCompat="@drawable/item_remocon" />
 
         <TextView
@@ -26,13 +26,14 @@
             android:layout_marginTop="5dp"
             android:text="리모컨"
             android:textColor="@color/colorBlackFT"
-            android:textSize="19dp"
+            android:textSize="14dp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_item_module"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="연결모듈" />
+            android:text="연결모듈"
+            android:textSize="13dp" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
